radiobuttons för vilken avdelning

--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -120,6 +120,20 @@
 
                 </div>
                 <div class=" col-md-6">
+
+                    <div class="falt">
+                        <div class="col-md-10">
+                            <label style="margin-bottom: 1px;">Avdelning</label><br />
+                            <form>
+                                <input type="radio" name="val" value="ja"> Kontoret
+                                <input type="radio" name="val" value="nej"> Underhåll<br>
+                            </form>
+                        </div>
+                    </div>
+                    <br />
+                    <br />
+                    <br />
+
                     <div class="falt">
                         <label>Rad:</label>
                         <div class="input-group">
@@ -132,7 +146,10 @@
                             <input name="state" placeholder="Kolumn" class="form-control" type="text">
                         </div>
                     </div>
-
+                    
+                    <br />
+                    <br />
+                    <br />
                    
                     <div @*class="col-md-4"*@>
                         <button type="submit" class="btn btn-warning">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
