lagt till knappar för redigera och ta bort för de redan anställda

--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -176,7 +176,33 @@
                     <p>
                         VD<br>
                         <a href="mailto:stieg@je-bygg.se" target="_blank">stieg@je-bygg.se</a>
+                        <br />
+                        <br />
+                        <br />
                     </p>
+                    <div class="row">
+                        <div class="col-lg-2">
+
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
+                                    Redigera
+                                    <span class="caret"></span>
+                                </button>
+                            </div>
+
+
+                        </div>
+                        <div class="col-lg-4">
+
+                            <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                <button class="btn" type="button" id="redigerabtn">
+                                    Ta bort
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-3 col-xs-7">
                     <center><img class="img-responsive" src="~/Content/Images/Anna.jpg" alt="Anna Ekström"></center>
@@ -187,6 +213,29 @@
                         019 - 16 43 72<br />
                         <a href="mailto:anna@je-bygg.se" target="_blank">anna@je-bygg.se</a>
                     </p>
+                    <div class="row">
+                        <div class="col-lg-2">
+
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
+                                    Redigera
+                                    <span class="caret"></span>
+                                </button>
+                            </div>
+
+
+                        </div>
+                        <div class="col-lg-4">
+
+                            <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                <button class="btn" type="button" id="redigerabtn">
+                                    Ta bort
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-3 col-xs-7">
                     <center><img class="img-responsive" src="~/Content/Images/Thor Mari.jpg" alt="Mari Ekström Thor"></center>
@@ -195,7 +244,32 @@
                         Ekonomichef/Kamrer<br />
                         019 - 16 43 71<br />
                         <a href="mailto:marie@je-bygg.se" target="_blank">marie@je-bygg.se</a>
+                        <br />
+                        <br />
                     </p>
+                    <div class="row">
+                        <div class="col-lg-2">
+
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
+                                    Redigera
+                                    <span class="caret"></span>
+                                </button>
+                            </div>
+
+
+                        </div>
+                        <div class="col-lg-4">
+
+                            <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                <button class="btn" type="button" id="redigerabtn">
+                                    Ta bort
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-3 col-xs-7">
                     <center><img class="img-responsive" src="~/Content/Images/TungfeltLena02.jpg" alt="Lena Ekström Tungfelt"></center>
@@ -204,9 +278,36 @@
                         Fastighetsförvaltare<br />
                         019 - 16 43 76 <br />
                         <a href="mailto:lena@je-bygg.se" target="_blank">lena@je-bygg.se</a>
+                        <br />
+                        <br />
                     </p>
+                    <div class="row">
+                        <div class="col-lg-2">
+
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
+                                    Redigera
+                                    <span class="caret"></span>
+                                </button>
+                            </div>
+
+
+                        </div>
+                        <div class="col-lg-4">
+
+                            <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                <button class="btn" type="button" id="redigerabtn">
+                                    Ta bort
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <br />
+            <br />
 
             <div class="row">
                 <div class="col-sm-3 col-xs-7">
