förklarande text på kontakt (?) skapade sidan omossAdmin

--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -120,6 +120,7 @@
 
                 </div>
                 <div class=" col-md-6">
+                    <p>Här borde vi lägga en förklarande text för radiobutton, rad och kolumn.</p>
 
                     <div class="falt">
                         <div class="col-md-10">
