--- a/design/design/Views/Home/omossAdmin.cshtml
+++ b/design/design/Views/Home/omossAdmin.cshtml
@@ -18,19 +18,43 @@
                         
                        <p> Byggmästaren John Ekström startade 1940 företaget John Ekströms byggnadsfirma. Nyckelordet i vår verksamhet är detsamma idag som det var för drygt 70 år sedan. Ordet är byggmästarkvalitét. En utgångspunkt som vi kommer hålla fast vid även i framtiden. Ekströms hus spänner över ett sekel av byggnader. Tack vare det kan vi erbjuda en rad olika typer av boendemiljöer. Vi har ca 900 hyreslägenheter i 60-talet innerstadsfastigheter. Vi här alltid noga med att sätta våra hyrsergäster i centrum. Därför strävar vi ständigt efter att skapa en trevlig och väl fungerande boendemiljö. Vi vill att våra hyresgäster ska känna trygghet, omtanke och trivsel.
                      </p>
-                           <br />
+                        <div class="btnredigera btn-group-xs">
+                            <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
+                                Redigera
+                                <span class="caret"></span>
+                            </button>
+                            <div class="redigera" id="redigera" style="display:none;">
+                                <div class="col-md-6">
+                                    <div class="falt">
+
+                                        <img src="~/Content/Images/publish-wordpress-page.jpg" />
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
-                </div>
              
                 <div class="row ">
                    
 
-                    <div class=" col-md-2"></div>
+                    <div class="col-md-2">
+                        <br />
+                    </div>
                     <div class="col-md-10">
                         <h3 style="color: #e93523">Företagets nyckelord</h3>
                         <p>Byggmästarkvalitét</p>
+                       
+                        <div class="btnredigera btn-group-xs">
+                            <button class="btn" type="button" id="redigerabtn">
+                                Redigera
+                            </button>
+                        </div>
                     </div>
-                    <div class=" col-md-2"></div>
+                    <div class="col-md-2">
+                        <br />
+                    </div>
                         <div class="col-md-10">
                             <h3 style="color: #e93523">Varför ska man hyra av oss?</h3>
                             <p>
@@ -38,18 +62,40 @@
                                 <br />
                                 Vi har lång erfarenhet av hyresfastigheter och hyresgäster.
                             </p>
+                       
+                            <div class="btnredigera btn-group-xs">
+                                <button class="btn" type="button" id="redigerabtn">
+                                    Redigera
+                                </button>
+                            </div>
                         </div>
 
-                    <div class=" col-md-2"></div>
+                    <div class="col-md-2">
+                        <br />
+                    </div>
                         <div class="col-md-10">
                             <h3 style="color: #e93523">Våra partners</h3>
                             <p>Wärna Städ och GMS i Örebro AB</p>
+                       
+                            <div class="btnredigera btn-group-xs">
+                                <button class="btn" type="button" id="redigerabtn">
+                                    Redigera
+                                </button>
+                            </div>
                         </div>
-                    <div class=" col-md-2"></div>
+                    <div class="col-md-2">
+                        <br />
+                    </div>
                         <div class="omoss col-md-10">
                             <h3 style="color: #e93523">EP-Fastigheter</h3>
                             <p>äger och förvaltar fastigheter i Örebro / Brickebacken. För intresseanmälan och mer information</p>
                             <a href="http://www.epfastigheter.se/" target="_blank">Läs mer på EP-fastigeheters egen hemsida</a>
+                            <br />
+                            <div class="btnredigera btn-group-xs">
+                                <button class="btn" type="button" id="redigerabtn">
+                                    Redigera
+                                </button>
+                            </div>
                         </div>
                         
                    
@@ -73,6 +119,11 @@
                         <p><b>Årets Fastighetsägare 2016</b><br />
                            <i> ”Denna fastighetsägare i Örebro hyser en särskild omtanke om samhällets mindre lyckligt lottade. Ett exempel på detta är den nyligen startade byggnationen av Sveriges modernaste kvinnohus som kommer erbjuda boende för våldsutsatta kvinnor och barn i behov av samhällets skydd. Att denna fastighetsägare även erbjuder övergångsbostäder ligger helt i linje med deras filosofi."</i>
                         </p>
+                        <div class="btnredigera btn-group-xs">
+                            <button class="btn" type="button" id="redigerabtn">
+                                Redigera
+                            </button>
+                        </div>
                     </div>
                     
 
@@ -80,7 +131,7 @@
                 </div>
             </div>
         </div>
-                
+                </div>
         </div>
          
         
