--- a/design/design/Views/Home/VarafastigheterAdmin.cshtml
+++ b/design/design/Views/Home/VarafastigheterAdmin.cshtml
@@ -102,7 +102,7 @@
 <div class=" row">
                        
                         <div class="redigera" id="redigera" style="display:none;">
-                            <div class=" col-md-6">
+                            <div class=" col-md-5">
                                 <div class="falt">
                                     <label>
                                         Område:
@@ -126,12 +126,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class=" col-md-6"><label>Bild:</label>
+                            <div class=" col-md-7">
+                                <label>Bild:</label>
                                 <div class="row falt">
                                     
                                     <div class="col-md-7">
                                        
-                                        <input name="state" placeholder="~/Content/Images/Blaslampan%202%20-%203.jpg" class="form-control" type="text">
+                                        <input name="state" placeholder="~/Content/Images/Blaslampan%202%20-%203.jpg" class="form-control" style="border-radius:0px;" type="text">
                                     </div>
                                     <div class=" col-md-3">
                                         <button type="submit" class="btn btn-default">Ladda upp <span class="glyphicon glyphicon-file"></span></button>
@@ -149,12 +150,15 @@
                                         </div>
                                     </div>
                                     <div class=" col-md-5">
-                                        <label>Hämta länk:</label>
+                                       <br />
+                                        <br />
+                                    
                                       <a href="https://goo.gl/maps/gvNVpwmYs5n" target="_blank"> Öppna google maps</a>
                                     </div>
                                 </div>
                               
                                 <div @*class="col-md-4" https://goo.gl/maps/VzopDD1M5mR2 *@>
+                                    <br>
                                     <button type="submit" class="btn btn-warning">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
                                 </div>
                             </div>
