--- a/design/design/Views/Home/Intresseanmalan.cshtml
+++ b/design/design/Views/Home/Intresseanmalan.cshtml
@@ -142,7 +142,7 @@
                 <div class="falt">
                     <label>Antal rum: </label>
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-door"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input name="ruminput" placeholder="Antal rum" class="form-control input-md" type="number">
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                 <div class="falt">
                     <label>Våning: </label>
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-door"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input name="våninginput" placeholder="Våning" class="form-control input-md" type="number">
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                 <div class="falt">
                     <label>Maxhyra: </label>
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-door"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input name="hyrainput" placeholder="Maxhyra" class="form-control input-md" type="number">
                     </div>
                 </div>
