--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -11,7 +11,7 @@
         <div class="row ">
 
 
-            <div class=" col-md-8 col-sm-7 divfastigheter2" >
+            <div class=" col-md-9 col-sm-7 divfastigheter2" >
                 <div class="col-sm-6 col-md-4 divleft2" >
                     <label>Visa fastigheter för</label>
                     <br />
@@ -30,7 +30,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-6">
+                <div class="col-sm-6 col-md-6 col-lg-5">
                         <label>Sök på adress</label>
                         <div class="input-group stylish-input-group">
                            
