--- a/design/design/Views/Home/VarafastigheterAdmin.cshtml
+++ b/design/design/Views/Home/VarafastigheterAdmin.cshtml
@@ -8,7 +8,7 @@
 <div class="maincontainer1">
     <div class="maincontainer row ontop">
         <legend style="color:#e93523;">Lägg till ny fastighet</legend>
-        <div class=" row">
+        <div class=" row" style="background-color:#fbfbfb;">
             
             <div class=" col-md-4 col-lg-4" >
                
