fortsatt med lediga objekt admin

--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -5939,10 +5939,11 @@ a.thumbnail.active {
 .list-group-item {
   position: relative;
   display: block;
-  padding: 10px 15px;
+  padding: 2px 5px;
   margin-bottom: -1px;
   background-color: #fff;
   border: 1px solid #ddd;
+  font-size:small;
 }
 .list-group-item:first-child {
   border-top-left-radius: 4px;
