fixat till bilden på Frågor och svar - Admin samt på om oss

--- a/design/design/Views/Home/FragorOchSvarAdmin.cshtml
+++ b/design/design/Views/Home/FragorOchSvarAdmin.cshtml
@@ -38,11 +38,10 @@
                     </div>
 
                     <div class="falt">
-                        <label>Svar:</label>
-                        <div class="input-group">
-                            
-                            <textarea class="form-control" name="comment" placeholder="Svar"></textarea>
-                        </div>
+                        <label>
+                            Svar:
+                        </label>
+                        <img src="~/Content/Images/publish-wordpress-page.jpg" />
                     </div>
 
                     
