--- a/design/design/Views/Home/omossAdmin.cshtml
+++ b/design/design/Views/Home/omossAdmin.cshtml
@@ -26,7 +26,16 @@
                             <div class="redigera" id="redigera" style="display:none;">
                                 <div class="col-md-6">
                                     <div class="falt">
-
+                                        <label>
+                                            Rubrik:
+                                        </label>
+                                        <div class="input-group">
+                                            <input name="state" placeholder="John EKströms Bygg" class="form-control" type="text">
+                                        </div>
+                                    </div>
+                                    <div class="falt">
+                                        <label>Text:
+                                        </label>
                                         <img src="~/Content/Images/publish-wordpress-page.jpg" />
                                         </div>
                                     </div>
