--- a/design/design/Views/Home/FragorOchSvarAdmin.cshtml
+++ b/design/design/Views/Home/FragorOchSvarAdmin.cshtml
@@ -27,24 +27,30 @@
         <div class=" row">
 
             <div class="redigera" id="redigera" style="display:none;">
-                <div class=" col-md-6">
-                    <div class="falt">
-                        <label>
-                            Fråga:
-                        </label>
-                        <div class="input-group">
-                            <input name="state" placeholder="Fråga" class="form-control" type="text">
+                <div class=" row" style="background-color:#dcdcdc;">
+                    <div class=" col-md-6">
+                        <div class="falt">
+                            <label>
+                                Fråga:
+                            </label>
+                            <div class="input-group">
+                                <input name="state" placeholder="Fråga" class="form-control" type="text">
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="falt">
-                        <label>
-                            Svar:
-                        </label>
-                        <img src="~/Content/Images/publish-wordpress-page.jpg" />
-                    </div>
+                        <div class="falt">
+                            <label>
+                                Svar:
+                            </label>
+                            <img src="~/Content/Images/publish-wordpress-page.jpg" />
+                        </div>
+                        <div class="falt">
+                            <button type="submit" class="btn btn-success">Spara <span class="glyphicon glyphicon-floppy-saved" style="text-align:right;"></span></button>
 
-                    
+                        </div>
+
+
+                    </div>
                     </div>
                 </div>
             </div>
