--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -178,24 +178,89 @@
                             <div class="col-lg-2">
 
                             </div>
-                            <div class="col-lg-4">
-                                <div class="btnredigera btn-group-xs" style="text-align:right;">
-                                    <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
-                                        Redigera
-                                        <span class="caret"></span>
-                                    </button>
+                            
+                                <div class="col-lg-2">
+                                    <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                        <button class="btn btn-default" type="button" id="redigerabtn" onclick="showredigera()">
+                                            Redigera
+                                            <span class="caret"></span>
+                                        </button>
+                                    </div>
+
+
+                                </div>
+                                <div class="col-lg-2">
+
+                                    <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                        <button class="btn btn-danger" type="button" id="redigerabtn">
+                                            Ta bort anställd
+                                        </button>
+                                    </div>
+                                </div>
+                            
+                            <div class=" row" style="background-color:#fbfbfb;">
+
+                                <div class="redigera" id="redigera" style="display:none; ">
+                                    <br />
+                                    <div class=" col-md-12 col-lg-12">
+                                        <div class="falt">
+                                            <label>
+                                                För- och Efternamn:
+                                            </label>
+                                            <div class="input-group">
+                                                <input name="state" placeholder="Stieg Ekström" class="form-control" type="text">
+                                            </div>
+                                        </div>
+
+                                        <div class="falt">
+                                            <label>Roll:</label>
+                                            <div class="input-group">
+                                                <input name="state" required placeholder="VD" class="form-control" type="text">
+                                            </div>
+                                        </div>
+
+                                        <div class="falt">
+                                            <label>Telefon:</label>
+                                            <div class="input-group">
+                                                <input name="deltagareinput" placeholder="" class="form-control input-md" type="text">
+                                            </div>
+                                        </div>
+                                        <div class="falt">
+                                            <label>E-post:</label>
+                                            <div class="input-group">
+                                                <input name="deltagareinput" placeholder="" class="form-control input-md" type="text">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class=" col-md-6 col-lg-6" style="padding-right:0px;">
+                                        <label>Bild:</label>
+                                        <div class="row falt">
+
+                                            <div class="col-md-7">
+
+                                                <input name="state" placeholder="~/Content/Images/Blaslampan%202%20-%203.jpg" class="form-control" style="border-radius:0px;" type="text">
+                                            </div>
+                                            <div class=" col-md-3 col-lg-3" style="padding-left:0px;">
+                                                <button type="submit" class="btn btn-default">Ladda upp <span class="glyphicon glyphicon-file"></span></button>
+                                            </div>
+                                        </div>
+                                                                              
+                                        
+                                    </div>
+                                   
+                                        
+
+                                        <div>
+                                            <br />
+
+                                            <button type="submit" class="btn btn-success" style="margin-top:75px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                        </div>
+                             
                                 </div>
 
 
                             </div>
-                            <div class="col-lg-4">
-
-                                <div class="btnredigera btn-group-xs" style="text-align:right;">
-                                    <button class="btn" type="button" id="redigerabtn">
-                                        Ta bort
-                                    </button>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                     <div class="col-sm-3 col-xs-7">
