småfix i redigera anställd

--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -175,25 +175,25 @@
                             <br />
                         </p>
                         <div class="row">
-                            <div class="col-lg-2">
-
-                            </div>
+                            
                             
                                 <div class="col-lg-2">
-                                    <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                    <div class="btnredigera btn-group-xs" style="text-align:left;">
                                         <button class="btn btn-default" type="button" id="redigerabtn" onclick="showredigera()">
                                             Redigera
                                             <span class="caret"></span>
                                         </button>
                                     </div>
+                                    <div class="col-lg-2">
 
+                                    </div>
 
                                 </div>
                                 <div class="col-lg-2">
 
                                     <div class="btnredigera btn-group-xs" style="text-align:right;">
                                         <button class="btn btn-danger" type="button" id="redigerabtn">
-                                            Ta bort anställd
+                                            Ta bort
                                         </button>
                                     </div>
                                 </div>
@@ -236,7 +236,7 @@
                                         <label>Bild:</label>
                                         <div class="row falt">
 
-                                            <div class="col-md-7">
+                                            <div class="col-md-9">
 
                                                 <input name="state" placeholder="~/Content/Images/Blaslampan%202%20-%203.jpg" class="form-control" style="border-radius:0px;" type="text">
                                             </div>
